# httpd

./: .gitignore  CMakeLists.txt  Makefile  config.nice  config.status  configure  httpd
docs/conf/: httpd.conf
docs/conf/extra/: httpd-autoindex.conf  httpd-manual.conf  httpd-multilang-errordoc.conf  httpd-ssl.conf
include/: ap_config_auto.h  ap_config_layout.h  trace_tool.h
modules/: Makefile
modules/aaa/: Makefile  mod_access_compat.la  mod_allowmethods.la  mod_auth_basic.la  mod_auth_digest.la  mod_auth_form.la  mod_authn_anon.la  mod_authn_core.la  mod_authn_dbd.la  mod_authn_dbm.la  mod_authn_file.la  mod_authn_socache.la  mod_authz_core.la  mod_authz_dbd.la  mod_authz_dbm.la  mod_authz_groupfile.la  mod_authz_host.la  mod_authz_owner.la  mod_authz_user.la
modules/aaa/.libs/: mod_access_compat.lai  mod_allowmethods.lai  mod_auth_basic.lai  mod_auth_digest.lai  mod_auth_form.lai  mod_authn_anon.lai  mod_authn_core.lai  mod_authn_dbd.lai  mod_authn_dbm.lai  mod_authn_file.lai  mod_authn_socache.lai  mod_authz_core.lai  mod_authz_dbd.lai  mod_authz_dbm.lai  mod_authz_groupfile.lai  mod_authz_host.lai  mod_authz_owner.lai  mod_authz_user.lai
modules/arch/unix/: Makefile  mod_unixd.la
modules/arch/unix/.libs/: mod_unixd.lai
modules/arch/win32/: Makefile
modules/cache/: Makefile  mod_cache.la  mod_cache_disk.la  mod_cache_socache.la  mod_file_cache.la  mod_socache_dbm.la  mod_socache_memcache.la  mod_socache_shmcb.la
modules/cache/.libs/: mod_cache.lai  mod_cache_disk.lai  mod_cache_socache.lai  mod_file_cache.lai  mod_socache_dbm.lai  mod_socache_memcache.lai  mod_socache_shmcb.lai
modules/cluster/: Makefile
modules/core/: Makefile  mod_macro.la  mod_watchdog.la
modules/core/.libs/: mod_macro.lai  mod_watchdog.lai
modules/database/: Makefile  mod_dbd.la
modules/database/.libs/: mod_dbd.lai
modules/dav/fs/: Makefile  mod_dav_fs.la
modules/dav/fs/.libs/: mod_dav_fs.lai
modules/dav/lock/: Makefile
modules/dav/main/: Makefile  mod_dav.la
modules/dav/main/.libs/: mod_dav.lai
modules/debugging/: Makefile  mod_dumpio.la
modules/debugging/.libs/: mod_dumpio.lai
modules/echo/: Makefile
modules/examples/: Makefile
modules/experimental/: Makefile
modules/filters/: Makefile  mod_buffer.la  mod_deflate.la  mod_ext_filter.c  mod_ext_filter.la  mod_filter.la  mod_include.la  mod_ratelimit.la  mod_reqtimeout.la  mod_request.la  mod_sed.la  mod_substitute.la
modules/filters/.libs/: mod_buffer.lai  mod_deflate.lai  mod_ext_filter.lai  mod_filter.lai  mod_include.lai  mod_ratelimit.lai  mod_reqtimeout.lai  mod_request.lai  mod_sed.lai  mod_substitute.lai
modules/generators/: Makefile  mod_autoindex.la  mod_cgid.la  mod_info.la  mod_status.la
modules/generators/.libs/: mod_autoindex.lai  mod_cgid.lai  mod_info.lai  mod_status.lai
modules/http/: Makefile  byterange_filter.c  chunk_filter.c  http_core.c  http_filters.c  http_request.c  mod_mime.la
modules/http/.libs/: mod_mime.lai
modules/http2/: modules.mk
modules/ldap/: Makefile
modules/loggers/: Makefile  mod_log_config.la  mod_log_debug.la  mod_logio.la
modules/loggers/.libs/: mod_log_config.lai  mod_log_debug.lai  mod_logio.lai
modules/lua/: Makefile
modules/mappers/: Makefile  mod_actions.la  mod_alias.la  mod_dir.la  mod_negotiation.la  mod_rewrite.la  mod_speling.la  mod_userdir.la  mod_vhost_alias.la
modules/mappers/.libs/: mod_actions.lai  mod_alias.lai  mod_dir.lai  mod_negotiation.lai  mod_rewrite.lai  mod_speling.lai  mod_userdir.lai  mod_vhost_alias.lai
modules/metadata/: Makefile  mod_env.la  mod_expires.la  mod_headers.la  mod_remoteip.la  mod_setenvif.la  mod_unique_id.la  mod_version.la
modules/metadata/.libs/: mod_env.lai  mod_expires.lai  mod_headers.lai  mod_remoteip.lai  mod_setenvif.lai  mod_unique_id.lai  mod_version.lai
modules/proxy/: Makefile  mod_proxy.la  mod_proxy_ajp.la  mod_proxy_balancer.la  mod_proxy_connect.la  mod_proxy_express.la  mod_proxy_fcgi.la  mod_proxy_ftp.la  mod_proxy_hcheck.la  mod_proxy_http.la  mod_proxy_scgi.la  mod_proxy_wstunnel.la
modules/proxy/.libs/: mod_proxy.lai  mod_proxy_ajp.lai  mod_proxy_balancer.lai  mod_proxy_connect.lai  mod_proxy_express.lai  mod_proxy_fcgi.lai  mod_proxy_ftp.lai  mod_proxy_hcheck.lai  mod_proxy_http.lai  mod_proxy_scgi.lai  mod_proxy_wstunnel.lai
modules/proxy/balancers/: Makefile  mod_lbmethod_bybusyness.la  mod_lbmethod_byrequests.la  mod_lbmethod_bytraffic.la  mod_lbmethod_heartbeat.la
modules/proxy/balancers/.libs/: mod_lbmethod_bybusyness.lai  mod_lbmethod_byrequests.lai  mod_lbmethod_bytraffic.lai  mod_lbmethod_heartbeat.lai
modules/session/: Makefile  mod_session.la  mod_session_cookie.la  mod_session_dbd.la
modules/session/.libs/: mod_session.lai  mod_session_cookie.lai  mod_session_dbd.lai
modules/slotmem/: Makefile  mod_slotmem_shm.la
modules/slotmem/.libs/: mod_slotmem_shm.lai
modules/ssl/: Makefile  mod_ssl.la  modules.mk
modules/ssl/.libs/: mod_ssl.lai
modules/test/: Makefile
os/: Makefile
os/unix/: Makefile
server/: Makefile  Makefile.in  config.c  connection.c  core.c  core_filters.c  export_files  exports.c  gen_test_char  protocol.c  trace_tool.cc  util_filter.c
server/mpm/: Makefile
server/mpm/event/: Makefile  event.c
srclib/: Makefile
srclib/apr/: Makefile  apr-1-config  apr.pc  config.nice  config.status  libtool
srclib/apr-util/: Makefile  apr-util.pc  apu-1-config  apu-config.out  config.nice  config.status  export_vars.sh  exports.c
srclib/apr-util/.libs/: libaprutil-1.lai  libaprutil-1.so.0.5.4  libaprutil-1.so.0.5.4T
srclib/apr-util/buckets/: apr_brigade.c  apr_buckets_alloc.c  apr_buckets_simple.c
srclib/apr-util/dbd/.libs/: apr_dbd_odbc.lai  apr_dbd_pgsql.lai  apr_dbd_sqlite3.lai
srclib/apr-util/include/private/: apu_config.h
srclib/apr-util/test/: Makefile
srclib/apr-util/xml/expat/: Makefile  libtool  (+1 more)
srclib/apr/test/: Makefile
support/: Makefile  ab  apachectl  apxs  checkgid  envvars-std  fcgistarter  htcacheclean  htdbm  htdigest  htpasswd  httxt2dbm  log_server_status  logresolve  rotatelogs
test/: Makefile
(+5 files in other folders)
