cmake_minimum_required(VERSION 3.6)
project(httpd)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    include/ap_compat.h
    include/ap_config.h
        include/ap_config_auto.h
        include/ap_config_layout.h
    include/ap_expr.h
    include/ap_hooks.h
    include/ap_listen.h
    include/ap_mmn.h
    include/ap_mpm.h
    include/ap_provider.h
    include/ap_regex.h
    include/ap_regkey.h
    include/ap_release.h
    include/ap_slotmem.h
    include/ap_socache.h
    include/apache_noprobes.h
    include/heartbeat.h
    include/http_config.h
    include/http_connection.h
    include/http_core.h
    include/http_log.h
    include/http_main.h
    include/http_protocol.h
    include/http_request.h
    include/http_vhost.h
    include/httpd.h
    include/mod_auth.h
    include/mod_core.h
    include/mod_request.h
    include/mpm_common.h
    include/scoreboard.h
        include/trace_tool.h
    include/util_cfgtree.h
    include/util_charset.h
    include/util_cookies.h
    include/util_ebcdic.h
    include/util_fcgi.h
    include/util_filter.h
    include/util_ldap.h
    include/util_md5.h
    include/util_mutex.h
    include/util_script.h
    include/util_time.h
    include/util_varbuf.h
    include/util_xml.h
    modules/aaa/mod_access_compat.c
    modules/aaa/mod_allowmethods.c
    modules/aaa/mod_auth_basic.c
    modules/aaa/mod_auth_digest.c
    modules/aaa/mod_auth_form.c
    modules/aaa/mod_authn_anon.c
    modules/aaa/mod_authn_core.c
    modules/aaa/mod_authn_dbd.c
    modules/aaa/mod_authn_dbm.c
    modules/aaa/mod_authn_file.c
    modules/aaa/mod_authn_socache.c
    modules/aaa/mod_authnz_fcgi.c
    modules/aaa/mod_authnz_ldap.c
    modules/aaa/mod_authz_core.c
    modules/aaa/mod_authz_dbd.c
    modules/aaa/mod_authz_dbd.h
    modules/aaa/mod_authz_dbm.c
    modules/aaa/mod_authz_groupfile.c
    modules/aaa/mod_authz_host.c
    modules/aaa/mod_authz_owner.c
    modules/aaa/mod_authz_owner.h
    modules/aaa/mod_authz_user.c
    modules/arch/netware/libprews.c
    modules/arch/netware/mod_netware.c
    modules/arch/netware/mod_nw_ssl.c
    modules/arch/unix/mod_privileges.c
    modules/arch/unix/mod_unixd.c
    modules/arch/unix/mod_unixd.h
    modules/arch/win32/mod_isapi.c
    modules/arch/win32/mod_isapi.h
    modules/arch/win32/mod_win32.c
    modules/cache/cache_common.h
    modules/cache/cache_disk_common.h
    modules/cache/cache_socache_common.h
    modules/cache/cache_storage.c
    modules/cache/cache_storage.h
    modules/cache/cache_util.c
    modules/cache/cache_util.h
    modules/cache/mod_cache.c
    modules/cache/mod_cache.h
    modules/cache/mod_cache_disk.c
    modules/cache/mod_cache_disk.h
    modules/cache/mod_cache_socache.c
    modules/cache/mod_file_cache.c
    modules/cache/mod_socache_dbm.c
    modules/cache/mod_socache_dc.c
    modules/cache/mod_socache_memcache.c
    modules/cache/mod_socache_shmcb.c
    modules/cluster/mod_heartbeat.c
    modules/cluster/mod_heartmonitor.c
    modules/core/mod_macro.c
    modules/core/mod_so.c
    modules/core/mod_so.h
    modules/core/mod_watchdog.c
    modules/core/mod_watchdog.h
    modules/database/mod_dbd.c
    modules/database/mod_dbd.h
    modules/dav/fs/dbm.c
    modules/dav/fs/lock.c
    modules/dav/fs/mod_dav_fs.c
    modules/dav/fs/repos.c
    modules/dav/fs/repos.h
    modules/dav/lock/locks.c
    modules/dav/lock/locks.h
    modules/dav/lock/mod_dav_lock.c
    modules/dav/main/liveprop.c
    modules/dav/main/mod_dav.c
    modules/dav/main/mod_dav.h
    modules/dav/main/props.c
    modules/dav/main/providers.c
    modules/dav/main/std_liveprop.c
    modules/dav/main/util.c
    modules/dav/main/util_lock.c
    modules/debugging/mod_bucketeer.c
    modules/debugging/mod_dumpio.c
    modules/echo/mod_echo.c
    modules/examples/mod_case_filter.c
    modules/examples/mod_case_filter_in.c
    modules/examples/mod_example_hooks.c
    modules/examples/mod_example_ipc.c
    modules/filters/libsed.h
    modules/filters/mod_buffer.c
    modules/filters/mod_charset_lite.c
    modules/filters/mod_data.c
    modules/filters/mod_deflate.c
    modules/filters/mod_ext_filter.c
    modules/filters/mod_filter.c
    modules/filters/mod_include.c
    modules/filters/mod_include.h
    modules/filters/mod_proxy_html.c
    modules/filters/mod_ratelimit.c
    modules/filters/mod_ratelimit.h
    modules/filters/mod_reflector.c
    modules/filters/mod_reqtimeout.c
    modules/filters/mod_request.c
    modules/filters/mod_sed.c
    modules/filters/mod_substitute.c
    modules/filters/mod_xml2enc.c
    modules/filters/mod_xml2enc.h
    modules/filters/regexp.c
    modules/filters/regexp.h
    modules/filters/sed.h
    modules/filters/sed0.c
    modules/filters/sed1.c
    modules/generators/mod_asis.c
    modules/generators/mod_autoindex.c
    modules/generators/mod_cgi.c
    modules/generators/mod_cgi.h
    modules/generators/mod_cgid.c
    modules/generators/mod_info.c
    modules/generators/mod_status.c
    modules/generators/mod_status.h
    modules/generators/mod_suexec.c
    modules/generators/mod_suexec.h
    modules/http/byterange_filter.c
    modules/http/chunk_filter.c
    modules/http/http_core.c
    modules/http/http_etag.c
    modules/http/http_filters.c
    modules/http/http_protocol.c
    modules/http/http_request.c
    modules/http/mod_mime.c
    modules/http2/h2.h
    modules/http2/h2_alt_svc.c
    modules/http2/h2_alt_svc.h
    modules/http2/h2_bucket_beam.c
    modules/http2/h2_bucket_beam.h
    modules/http2/h2_bucket_eoc.c
    modules/http2/h2_bucket_eoc.h
    modules/http2/h2_bucket_eos.c
    modules/http2/h2_bucket_eos.h
    modules/http2/h2_config.c
    modules/http2/h2_config.h
    modules/http2/h2_conn.c
    modules/http2/h2_conn.h
    modules/http2/h2_conn_io.c
    modules/http2/h2_conn_io.h
    modules/http2/h2_ctx.c
    modules/http2/h2_ctx.h
    modules/http2/h2_filter.c
    modules/http2/h2_filter.h
    modules/http2/h2_from_h1.c
    modules/http2/h2_from_h1.h
    modules/http2/h2_h2.c
    modules/http2/h2_h2.h
    modules/http2/h2_mplx.c
    modules/http2/h2_mplx.h
    modules/http2/h2_ngn_shed.c
    modules/http2/h2_ngn_shed.h
    modules/http2/h2_private.h
    modules/http2/h2_proxy_session.c
    modules/http2/h2_proxy_session.h
    modules/http2/h2_proxy_util.c
    modules/http2/h2_proxy_util.h
    modules/http2/h2_push.c
    modules/http2/h2_push.h
    modules/http2/h2_request.c
    modules/http2/h2_request.h
    modules/http2/h2_response.c
    modules/http2/h2_response.h
    modules/http2/h2_session.c
    modules/http2/h2_session.h
    modules/http2/h2_stream.c
    modules/http2/h2_stream.h
    modules/http2/h2_stream_set.c
    modules/http2/h2_stream_set.h
    modules/http2/h2_switch.c
    modules/http2/h2_switch.h
    modules/http2/h2_task.c
    modules/http2/h2_task.h
    modules/http2/h2_util.c
    modules/http2/h2_util.h
    modules/http2/h2_version.h
    modules/http2/h2_worker.c
    modules/http2/h2_worker.h
    modules/http2/h2_workers.c
    modules/http2/h2_workers.h
    modules/http2/mod_http2.c
    modules/http2/mod_http2.h
    modules/http2/mod_proxy_http2.c
    modules/http2/mod_proxy_http2.h
    modules/ldap/util_ldap.c
    modules/ldap/util_ldap_cache.c
    modules/ldap/util_ldap_cache.h
    modules/ldap/util_ldap_cache_mgr.c
    modules/loggers/mod_log_config.c
    modules/loggers/mod_log_config.h
    modules/loggers/mod_log_debug.c
    modules/loggers/mod_log_forensic.c
    modules/loggers/mod_logio.c
    modules/lua/lua_apr.c
    modules/lua/lua_apr.h
    modules/lua/lua_config.c
    modules/lua/lua_config.h
    modules/lua/lua_dbd.c
    modules/lua/lua_dbd.h
    modules/lua/lua_passwd.c
    modules/lua/lua_passwd.h
    modules/lua/lua_request.c
    modules/lua/lua_request.h
    modules/lua/lua_vmprep.c
    modules/lua/lua_vmprep.h
    modules/lua/mod_lua.c
    modules/lua/mod_lua.h
    modules/mappers/mod_actions.c
    modules/mappers/mod_alias.c
    modules/mappers/mod_dir.c
    modules/mappers/mod_imagemap.c
    modules/mappers/mod_negotiation.c
    modules/mappers/mod_rewrite.c
    modules/mappers/mod_rewrite.h
    modules/mappers/mod_speling.c
    modules/mappers/mod_userdir.c
    modules/mappers/mod_vhost_alias.c
    modules/metadata/mod_cern_meta.c
    modules/metadata/mod_env.c
    modules/metadata/mod_expires.c
    modules/metadata/mod_headers.c
    modules/metadata/mod_ident.c
    modules/metadata/mod_mime_magic.c
    modules/metadata/mod_remoteip.c
    modules/metadata/mod_setenvif.c
    modules/metadata/mod_unique_id.c
    modules/metadata/mod_usertrack.c
    modules/metadata/mod_version.c
    modules/proxy/balancers/mod_lbmethod_bybusyness.c
    modules/proxy/balancers/mod_lbmethod_byrequests.c
    modules/proxy/balancers/mod_lbmethod_bytraffic.c
    modules/proxy/balancers/mod_lbmethod_heartbeat.c
    modules/proxy/ajp.h
    modules/proxy/ajp_header.c
    modules/proxy/ajp_header.h
    modules/proxy/ajp_link.c
    modules/proxy/ajp_msg.c
    modules/proxy/ajp_utils.c
    modules/proxy/mod_proxy.c
    modules/proxy/mod_proxy.h
    modules/proxy/mod_proxy_ajp.c
    modules/proxy/mod_proxy_balancer.c
    modules/proxy/mod_proxy_connect.c
    modules/proxy/mod_proxy_express.c
    modules/proxy/mod_proxy_fcgi.c
    modules/proxy/mod_proxy_fdpass.c
    modules/proxy/mod_proxy_fdpass.h
    modules/proxy/mod_proxy_ftp.c
    modules/proxy/mod_proxy_hcheck.c
    modules/proxy/mod_proxy_http.c
    modules/proxy/mod_proxy_scgi.c
    modules/proxy/mod_proxy_wstunnel.c
    modules/proxy/proxy_util.c
    modules/proxy/proxy_util.h
    modules/proxy/scgi.h
    modules/session/mod_session.c
    modules/session/mod_session.h
    modules/session/mod_session_cookie.c
    modules/session/mod_session_crypto.c
    modules/session/mod_session_dbd.c
    modules/slotmem/mod_slotmem_plain.c
    modules/slotmem/mod_slotmem_shm.c
    modules/ssl/mod_ssl.c
    modules/ssl/mod_ssl.h
    modules/ssl/mod_ssl_openssl.h
    modules/ssl/ssl_engine_config.c
    modules/ssl/ssl_engine_init.c
    modules/ssl/ssl_engine_io.c
    modules/ssl/ssl_engine_kernel.c
    modules/ssl/ssl_engine_log.c
    modules/ssl/ssl_engine_mutex.c
    modules/ssl/ssl_engine_ocsp.c
    modules/ssl/ssl_engine_pphrase.c
    modules/ssl/ssl_engine_rand.c
    modules/ssl/ssl_engine_vars.c
    modules/ssl/ssl_private.h
    modules/ssl/ssl_scache.c
    modules/ssl/ssl_util.c
    modules/ssl/ssl_util_ocsp.c
    modules/ssl/ssl_util_ssl.c
    modules/ssl/ssl_util_ssl.h
    modules/ssl/ssl_util_stapling.c
    modules/test/mod_dialup.c
    modules/test/mod_optional_fn_export.c
    modules/test/mod_optional_fn_export.h
    modules/test/mod_optional_fn_import.c
    modules/test/mod_optional_hook_export.c
    modules/test/mod_optional_hook_export.h
    modules/test/mod_optional_hook_import.c
    os/bs2000/ebcdic.c
    os/bs2000/ebcdic.h
    os/bs2000/os.c
    os/bs2000/os.h
    os/netware/modules.c
    os/netware/netware_config_layout.h
    os/netware/os.h
    os/netware/pre_nw.h
    os/netware/util_nw.c
    os/os2/os.h
    os/os2/util_os2.c
    os/unix/os.h
    os/unix/unixd.c
    os/unix/unixd.h
    os/win32/ap_regkey.c
    os/win32/modules.c
    os/win32/os.h
    os/win32/util_win32.c
    os/win32/win32_config_layout.h
    server/mpm/event/event.c
    server/mpm/event/fdqueue.c
    server/mpm/event/fdqueue.h
    server/mpm/event/mpm_default.h
    server/mpm/mpmt_os2/mpm_default.h
    server/mpm/mpmt_os2/mpmt_os2.c
    server/mpm/mpmt_os2/mpmt_os2_child.c
    server/mpm/netware/mpm_default.h
    server/mpm/netware/mpm_netware.c
    server/mpm/prefork/mpm_default.h
    server/mpm/prefork/prefork.c
    server/mpm/winnt/child.c
    server/mpm/winnt/mpm_default.h
    server/mpm/winnt/mpm_winnt.c
    server/mpm/winnt/mpm_winnt.h
    server/mpm/winnt/nt_eventlog.c
    server/mpm/winnt/service.c
    server/mpm/worker/fdqueue.c
    server/mpm/worker/fdqueue.h
    server/mpm/worker/mpm_default.h
    server/mpm/worker/worker.c
    server/buildmark.c
    server/config.c
    server/connection.c
    server/core.c
    server/core_filters.c
    server/eoc_bucket.c
    server/eor_bucket.c
    server/error_bucket.c
    server/gen_test_char.c
    server/listen.c
    server/log.c
    server/main.c
    server/mpm_common.c
    server/mpm_unix.c
    server/protocol.c
    server/provider.c
    server/request.c
    server/scoreboard.c
        server/trace_tool.cc
    server/util.c
    server/util_cfgtree.c
    server/util_charset.c
    server/util_cookies.c
    server/util_debug.c
    server/util_ebcdic.c
    server/util_expr_eval.c
    server/util_expr_parse.c
    server/util_expr_parse.h
    server/util_expr_private.h
    server/util_expr_scan.c
    server/util_fcgi.c
    server/util_filter.c
    server/util_md5.c
    server/util_mutex.c
    server/util_pcre.c
    server/util_regex.c
    server/util_script.c
    server/util_time.c
    server/util_xml.c
    server/vhost.c
        srclib/apr/atomic/netware/apr_atomic.c
        srclib/apr/atomic/os390/atomic.c
        srclib/apr/atomic/unix/builtins.c
        srclib/apr/atomic/unix/ia32.c
        srclib/apr/atomic/unix/mutex.c
        srclib/apr/atomic/unix/ppc.c
        srclib/apr/atomic/unix/s390.c
        srclib/apr/atomic/unix/solaris.c
        srclib/apr/atomic/win32/apr_atomic.c
        srclib/apr/build/aplibtool.c
        srclib/apr/build/jlibtool.c
        srclib/apr/dso/aix/dso.c
        srclib/apr/dso/beos/dso.c
        srclib/apr/dso/netware/dso.c
        srclib/apr/dso/os2/dso.c
        srclib/apr/dso/os390/dso.c
        srclib/apr/dso/unix/dso.c
        srclib/apr/dso/win32/dso.c
        srclib/apr/encoding/apr_escape.c
        srclib/apr/file_io/netware/filepath.c
        srclib/apr/file_io/netware/filestat.c
        srclib/apr/file_io/netware/filesys.c
        srclib/apr/file_io/netware/flock.c
        srclib/apr/file_io/netware/mktemp.c
        srclib/apr/file_io/netware/pipe.c
        srclib/apr/file_io/os2/buffer.c
        srclib/apr/file_io/os2/copy.c
        srclib/apr/file_io/os2/dir.c
        srclib/apr/file_io/os2/dir_make_recurse.c
        srclib/apr/file_io/os2/fileacc.c
        srclib/apr/file_io/os2/filedup.c
        srclib/apr/file_io/os2/filepath.c
        srclib/apr/file_io/os2/filepath_util.c
        srclib/apr/file_io/os2/filestat.c
        srclib/apr/file_io/os2/filesys.c
        srclib/apr/file_io/os2/flock.c
        srclib/apr/file_io/os2/fullrw.c
        srclib/apr/file_io/os2/maperrorcode.c
        srclib/apr/file_io/os2/mktemp.c
        srclib/apr/file_io/os2/open.c
        srclib/apr/file_io/os2/pipe.c
        srclib/apr/file_io/os2/readwrite.c
        srclib/apr/file_io/os2/seek.c
        srclib/apr/file_io/os2/tempdir.c
        srclib/apr/file_io/unix/buffer.c
        srclib/apr/file_io/unix/copy.c
        srclib/apr/file_io/unix/dir.c
        srclib/apr/file_io/unix/fileacc.c
        srclib/apr/file_io/unix/filedup.c
        srclib/apr/file_io/unix/filepath.c
        srclib/apr/file_io/unix/filepath_util.c
        srclib/apr/file_io/unix/filestat.c
        srclib/apr/file_io/unix/flock.c
        srclib/apr/file_io/unix/fullrw.c
        srclib/apr/file_io/unix/mktemp.c
        srclib/apr/file_io/unix/open.c
        srclib/apr/file_io/unix/pipe.c
        srclib/apr/file_io/unix/readwrite.c
        srclib/apr/file_io/unix/seek.c
        srclib/apr/file_io/unix/tempdir.c
        srclib/apr/file_io/win32/buffer.c
        srclib/apr/file_io/win32/dir.c
        srclib/apr/file_io/win32/filedup.c
        srclib/apr/file_io/win32/filepath.c
        srclib/apr/file_io/win32/filestat.c
        srclib/apr/file_io/win32/filesys.c
        srclib/apr/file_io/win32/flock.c
        srclib/apr/file_io/win32/open.c
        srclib/apr/file_io/win32/pipe.c
        srclib/apr/file_io/win32/readwrite.c
        srclib/apr/file_io/win32/seek.c
        srclib/apr/include/arch/aix/apr_arch_dso.h
        srclib/apr/include/arch/beos/apr_arch_dso.h
        srclib/apr/include/arch/beos/apr_arch_proc_mutex.h
        srclib/apr/include/arch/beos/apr_arch_thread_cond.h
        srclib/apr/include/arch/beos/apr_arch_thread_mutex.h
        srclib/apr/include/arch/beos/apr_arch_thread_rwlock.h
        srclib/apr/include/arch/beos/apr_arch_threadproc.h
        srclib/apr/include/arch/netware/apr_arch_dso.h
        srclib/apr/include/arch/netware/apr_arch_file_io.h
        srclib/apr/include/arch/netware/apr_arch_global_mutex.h
        srclib/apr/include/arch/netware/apr_arch_internal_time.h
        srclib/apr/include/arch/netware/apr_arch_networkio.h
        srclib/apr/include/arch/netware/apr_arch_pre_nw.h
        srclib/apr/include/arch/netware/apr_arch_proc_mutex.h
        srclib/apr/include/arch/netware/apr_arch_thread_cond.h
        srclib/apr/include/arch/netware/apr_arch_thread_mutex.h
        srclib/apr/include/arch/netware/apr_arch_thread_rwlock.h
        srclib/apr/include/arch/netware/apr_arch_threadproc.h
        srclib/apr/include/arch/netware/apr_private.h
        srclib/apr/include/arch/os2/apr_arch_dso.h
        srclib/apr/include/arch/os2/apr_arch_file_io.h
        srclib/apr/include/arch/os2/apr_arch_inherit.h
        srclib/apr/include/arch/os2/apr_arch_networkio.h
        srclib/apr/include/arch/os2/apr_arch_os2calls.h
        srclib/apr/include/arch/os2/apr_arch_proc_mutex.h
        srclib/apr/include/arch/os2/apr_arch_thread_cond.h
        srclib/apr/include/arch/os2/apr_arch_thread_mutex.h
        srclib/apr/include/arch/os2/apr_arch_thread_rwlock.h
        srclib/apr/include/arch/os2/apr_arch_threadproc.h
        srclib/apr/include/arch/os390/apr_arch_dso.h
        srclib/apr/include/arch/unix/apr_arch_atomic.h
        srclib/apr/include/arch/unix/apr_arch_dso.h
        srclib/apr/include/arch/unix/apr_arch_file_io.h
        srclib/apr/include/arch/unix/apr_arch_global_mutex.h
        srclib/apr/include/arch/unix/apr_arch_inherit.h
        srclib/apr/include/arch/unix/apr_arch_internal_time.h
        srclib/apr/include/arch/unix/apr_arch_misc.h
        srclib/apr/include/arch/unix/apr_arch_networkio.h
        srclib/apr/include/arch/unix/apr_arch_poll_private.h
        srclib/apr/include/arch/unix/apr_arch_proc_mutex.h
        srclib/apr/include/arch/unix/apr_arch_shm.h
        srclib/apr/include/arch/unix/apr_arch_thread_cond.h
        srclib/apr/include/arch/unix/apr_arch_thread_mutex.h
        srclib/apr/include/arch/unix/apr_arch_thread_rwlock.h
        srclib/apr/include/arch/unix/apr_arch_threadproc.h
        srclib/apr/include/arch/win32/apr_arch_atime.h
        srclib/apr/include/arch/win32/apr_arch_dso.h
        srclib/apr/include/arch/win32/apr_arch_file_io.h
        srclib/apr/include/arch/win32/apr_arch_inherit.h
        srclib/apr/include/arch/win32/apr_arch_misc.h
        srclib/apr/include/arch/win32/apr_arch_networkio.h
        srclib/apr/include/arch/win32/apr_arch_proc_mutex.h
        srclib/apr/include/arch/win32/apr_arch_thread_cond.h
        srclib/apr/include/arch/win32/apr_arch_thread_mutex.h
        srclib/apr/include/arch/win32/apr_arch_thread_rwlock.h
        srclib/apr/include/arch/win32/apr_arch_threadproc.h
        srclib/apr/include/arch/win32/apr_arch_utf8.h
        srclib/apr/include/arch/win32/apr_dbg_win32_handles.h
        srclib/apr/include/arch/win32/apr_private.h
        srclib/apr/include/arch/apr_private_common.h
        srclib/apr/include/apr_allocator.h
        srclib/apr/include/apr_atomic.h
        srclib/apr/include/apr_dso.h
        srclib/apr/include/apr_env.h
        srclib/apr/include/apr_errno.h
        srclib/apr/include/apr_escape.h
        srclib/apr/include/apr_file_info.h
        srclib/apr/include/apr_file_io.h
        srclib/apr/include/apr_fnmatch.h
        srclib/apr/include/apr_general.h
        srclib/apr/include/apr_getopt.h
        srclib/apr/include/apr_global_mutex.h
        srclib/apr/include/apr_hash.h
        srclib/apr/include/apr_inherit.h
        srclib/apr/include/apr_lib.h
        srclib/apr/include/apr_mmap.h
        srclib/apr/include/apr_network_io.h
        srclib/apr/include/apr_poll.h
        srclib/apr/include/apr_pools.h
        srclib/apr/include/apr_portable.h
        srclib/apr/include/apr_proc_mutex.h
        srclib/apr/include/apr_random.h
        srclib/apr/include/apr_ring.h
        srclib/apr/include/apr_shm.h
        srclib/apr/include/apr_signal.h
        srclib/apr/include/apr_skiplist.h
        srclib/apr/include/apr_strings.h
        srclib/apr/include/apr_support.h
        srclib/apr/include/apr_tables.h
        srclib/apr/include/apr_thread_cond.h
        srclib/apr/include/apr_thread_mutex.h
        srclib/apr/include/apr_thread_proc.h
        srclib/apr/include/apr_thread_rwlock.h
        srclib/apr/include/apr_time.h
        srclib/apr/include/apr_user.h
        srclib/apr/include/apr_version.h
        srclib/apr/include/apr_want.h
        srclib/apr/locks/beos/proc_mutex.c
        srclib/apr/locks/beos/thread_cond.c
        srclib/apr/locks/beos/thread_mutex.c
        srclib/apr/locks/beos/thread_rwlock.c
        srclib/apr/locks/netware/proc_mutex.c
        srclib/apr/locks/netware/thread_cond.c
        srclib/apr/locks/netware/thread_mutex.c
        srclib/apr/locks/netware/thread_rwlock.c
        srclib/apr/locks/os2/proc_mutex.c
        srclib/apr/locks/os2/thread_cond.c
        srclib/apr/locks/os2/thread_mutex.c
        srclib/apr/locks/os2/thread_rwlock.c
        srclib/apr/locks/unix/global_mutex.c
        srclib/apr/locks/unix/proc_mutex.c
        srclib/apr/locks/unix/thread_cond.c
        srclib/apr/locks/unix/thread_mutex.c
        srclib/apr/locks/unix/thread_rwlock.c
        srclib/apr/locks/win32/proc_mutex.c
        srclib/apr/locks/win32/thread_cond.c
        srclib/apr/locks/win32/thread_mutex.c
        srclib/apr/locks/win32/thread_rwlock.c
        srclib/apr/memory/unix/apr_pools.c
        srclib/apr/misc/netware/charset.c
        srclib/apr/misc/netware/libprews.c
        srclib/apr/misc/netware/rand.c
        srclib/apr/misc/netware/start.c
        srclib/apr/misc/unix/charset.c
        srclib/apr/misc/unix/env.c
        srclib/apr/misc/unix/errorcodes.c
        srclib/apr/misc/unix/getopt.c
        srclib/apr/misc/unix/otherchild.c
        srclib/apr/misc/unix/rand.c
        srclib/apr/misc/unix/start.c
        srclib/apr/misc/unix/version.c
        srclib/apr/misc/win32/apr_app.c
        srclib/apr/misc/win32/charset.c
        srclib/apr/misc/win32/env.c
        srclib/apr/misc/win32/internal.c
        srclib/apr/misc/win32/misc.c
        srclib/apr/misc/win32/rand.c
        srclib/apr/misc/win32/start.c
        srclib/apr/misc/win32/utf8.c
        srclib/apr/mmap/unix/common.c
        srclib/apr/mmap/unix/mmap.c
        srclib/apr/mmap/win32/mmap.c
        srclib/apr/network_io/beos/sendrecv.c
        srclib/apr/network_io/beos/socketcommon.c
        srclib/apr/network_io/os2/inet_ntop.c
        srclib/apr/network_io/os2/inet_pton.c
        srclib/apr/network_io/os2/os2calls.c
        srclib/apr/network_io/os2/sendrecv.c
        srclib/apr/network_io/os2/sendrecv_udp.c
        srclib/apr/network_io/os2/sockaddr.c
        srclib/apr/network_io/os2/socket_util.c
        srclib/apr/network_io/os2/sockets.c
        srclib/apr/network_io/os2/sockopt.c
        srclib/apr/network_io/unix/inet_ntop.c
        srclib/apr/network_io/unix/inet_pton.c
        srclib/apr/network_io/unix/multicast.c
        srclib/apr/network_io/unix/sendrecv.c
        srclib/apr/network_io/unix/sockaddr.c
        srclib/apr/network_io/unix/socket_util.c
        srclib/apr/network_io/unix/sockets.c
        srclib/apr/network_io/unix/sockopt.c
        srclib/apr/network_io/win32/sendrecv.c
        srclib/apr/network_io/win32/sockets.c
        srclib/apr/network_io/win32/sockopt.c
        srclib/apr/passwd/apr_getpass.c
        srclib/apr/poll/os2/poll.c
        srclib/apr/poll/os2/pollset.c
        srclib/apr/poll/unix/epoll.c
        srclib/apr/poll/unix/kqueue.c
        srclib/apr/poll/unix/poll.c
        srclib/apr/poll/unix/pollcb.c
        srclib/apr/poll/unix/pollset.c
        srclib/apr/poll/unix/port.c
        srclib/apr/poll/unix/select.c
        srclib/apr/poll/unix/z_asio.c
        srclib/apr/random/unix/apr_random.c
        srclib/apr/random/unix/sha2.c
        srclib/apr/random/unix/sha2.h
        srclib/apr/random/unix/sha2_glue.c
        srclib/apr/shmem/beos/shm.c
        srclib/apr/shmem/os2/shm.c
        srclib/apr/shmem/unix/shm.c
        srclib/apr/shmem/win32/shm.c
        srclib/apr/strings/apr_cpystrn.c
        srclib/apr/strings/apr_fnmatch.c
        srclib/apr/strings/apr_snprintf.c
        srclib/apr/strings/apr_strings.c
        srclib/apr/strings/apr_strnatcmp.c
        srclib/apr/strings/apr_strtok.c
        srclib/apr/support/unix/waitio.c
        srclib/apr/tables/apr_hash.c
        srclib/apr/tables/apr_skiplist.c
        srclib/apr/tables/apr_tables.c
        srclib/apr/test/internal/testregex.c
        srclib/apr/test/internal/testucs.c
        srclib/apr/test/abts.c
        srclib/apr/test/abts.h
        srclib/apr/test/abts_tests.h
        srclib/apr/test/echod.c
        srclib/apr/test/globalmutexchild.c
        srclib/apr/test/mod_test.c
        srclib/apr/test/nw_misc.c
        srclib/apr/test/occhild.c
        srclib/apr/test/proc_child.c
        srclib/apr/test/readchild.c
        srclib/apr/test/sendfile.c
        srclib/apr/test/sockchild.c
        srclib/apr/test/sockperf.c
        srclib/apr/test/testapp.c
        srclib/apr/test/testargs.c
        srclib/apr/test/testatomic.c
        srclib/apr/test/testcond.c
        srclib/apr/test/testdir.c
        srclib/apr/test/testdso.c
        srclib/apr/test/testdup.c
        srclib/apr/test/testenv.c
        srclib/apr/test/testescape.c
        srclib/apr/test/testfile.c
        srclib/apr/test/testfilecopy.c
        srclib/apr/test/testfileinfo.c
        srclib/apr/test/testflock.c
        srclib/apr/test/testflock.h
        srclib/apr/test/testfmt.c
        srclib/apr/test/testfnmatch.c
        srclib/apr/test/testglobalmutex.c
        srclib/apr/test/testglobalmutex.h
        srclib/apr/test/testhash.c
        srclib/apr/test/testipsub.c
        srclib/apr/test/testlfs.c
        srclib/apr/test/testlock.c
        srclib/apr/test/testlockperf.c
        srclib/apr/test/testmmap.c
        srclib/apr/test/testmutexscope.c
        srclib/apr/test/testnames.c
        srclib/apr/test/testoc.c
        srclib/apr/test/testpath.c
        srclib/apr/test/testpipe.c
        srclib/apr/test/testpoll.c
        srclib/apr/test/testpools.c
        srclib/apr/test/testproc.c
        srclib/apr/test/testprocmutex.c
        srclib/apr/test/testrand.c
        srclib/apr/test/testshm.c
        srclib/apr/test/testshm.h
        srclib/apr/test/testshmconsumer.c
        srclib/apr/test/testshmproducer.c
        srclib/apr/test/testskiplist.c
        srclib/apr/test/testsleep.c
        srclib/apr/test/testsock.c
        srclib/apr/test/testsock.h
        srclib/apr/test/testsockets.c
        srclib/apr/test/testsockopt.c
        srclib/apr/test/teststr.c
        srclib/apr/test/teststrnatcmp.c
        srclib/apr/test/testtable.c
        srclib/apr/test/testtemp.c
        srclib/apr/test/testthread.c
        srclib/apr/test/testtime.c
        srclib/apr/test/testud.c
        srclib/apr/test/testuser.c
        srclib/apr/test/testutil.c
        srclib/apr/test/testutil.h
        srclib/apr/test/testvsn.c
        srclib/apr/test/tryread.c
        srclib/apr/threadproc/beos/apr_proc_stub.c
        srclib/apr/threadproc/beos/proc.c
        srclib/apr/threadproc/beos/thread.c
        srclib/apr/threadproc/beos/threadpriv.c
        srclib/apr/threadproc/beos/threadproc_common.c
        srclib/apr/threadproc/netware/proc.c
        srclib/apr/threadproc/netware/procsup.c
        srclib/apr/threadproc/netware/signals.c
        srclib/apr/threadproc/netware/thread.c
        srclib/apr/threadproc/netware/threadpriv.c
        srclib/apr/threadproc/os2/proc.c
        srclib/apr/threadproc/os2/signals.c
        srclib/apr/threadproc/os2/thread.c
        srclib/apr/threadproc/os2/threadpriv.c
        srclib/apr/threadproc/unix/proc.c
        srclib/apr/threadproc/unix/procsup.c
        srclib/apr/threadproc/unix/signals.c
        srclib/apr/threadproc/unix/thread.c
        srclib/apr/threadproc/unix/threadpriv.c
        srclib/apr/threadproc/win32/proc.c
        srclib/apr/threadproc/win32/signals.c
        srclib/apr/threadproc/win32/thread.c
        srclib/apr/threadproc/win32/threadpriv.c
        srclib/apr/time/unix/time.c
        srclib/apr/time/unix/timestr.c
        srclib/apr/time/win32/time.c
        srclib/apr/time/win32/timestr.c
        srclib/apr/tools/gen_test_char.c
        srclib/apr/user/netware/groupinfo.c
        srclib/apr/user/netware/userinfo.c
        srclib/apr/user/unix/groupinfo.c
        srclib/apr/user/unix/userinfo.c
        srclib/apr/user/win32/groupinfo.c
        srclib/apr/user/win32/userinfo.c
        srclib/apr-util/buckets/apr_brigade.c
        srclib/apr-util/buckets/apr_buckets.c
        srclib/apr-util/buckets/apr_buckets_alloc.c
        srclib/apr-util/buckets/apr_buckets_eos.c
        srclib/apr-util/buckets/apr_buckets_file.c
        srclib/apr-util/buckets/apr_buckets_flush.c
        srclib/apr-util/buckets/apr_buckets_heap.c
        srclib/apr-util/buckets/apr_buckets_mmap.c
        srclib/apr-util/buckets/apr_buckets_pipe.c
        srclib/apr-util/buckets/apr_buckets_pool.c
        srclib/apr-util/buckets/apr_buckets_refcount.c
        srclib/apr-util/buckets/apr_buckets_simple.c
        srclib/apr-util/buckets/apr_buckets_socket.c
        srclib/apr-util/crypto/apr_crypto.c
        srclib/apr-util/crypto/apr_crypto_nss.c
        srclib/apr-util/crypto/apr_crypto_openssl.c
        srclib/apr-util/crypto/apr_md4.c
        srclib/apr-util/crypto/apr_md5.c
        srclib/apr-util/crypto/apr_passwd.c
        srclib/apr-util/crypto/apr_sha1.c
        srclib/apr-util/crypto/crypt_blowfish.c
        srclib/apr-util/crypto/crypt_blowfish.h
        srclib/apr-util/crypto/getuuid.c
        srclib/apr-util/crypto/uuid.c
        srclib/apr-util/dbd/apr_dbd.c
        srclib/apr-util/dbd/apr_dbd_freetds.c
        srclib/apr-util/dbd/apr_dbd_mysql.c
        srclib/apr-util/dbd/apr_dbd_odbc.c
        srclib/apr-util/dbd/apr_dbd_oracle.c
        srclib/apr-util/dbd/apr_dbd_pgsql.c
        srclib/apr-util/dbd/apr_dbd_sqlite2.c
        srclib/apr-util/dbd/apr_dbd_sqlite3.c
        srclib/apr-util/dbm/sdbm/sdbm.c
        srclib/apr-util/dbm/sdbm/sdbm_hash.c
        srclib/apr-util/dbm/sdbm/sdbm_lock.c
        srclib/apr-util/dbm/sdbm/sdbm_pair.c
        srclib/apr-util/dbm/sdbm/sdbm_pair.h
        srclib/apr-util/dbm/sdbm/sdbm_private.h
        srclib/apr-util/dbm/sdbm/sdbm_tune.h
        srclib/apr-util/dbm/apr_dbm.c
        srclib/apr-util/dbm/apr_dbm_berkeleydb.c
        srclib/apr-util/dbm/apr_dbm_gdbm.c
        srclib/apr-util/dbm/apr_dbm_ndbm.c
        srclib/apr-util/dbm/apr_dbm_sdbm.c
        srclib/apr-util/encoding/apr_base64.c
        srclib/apr-util/hooks/apr_hooks.c
        srclib/apr-util/include/private/apr_crypto_internal.h
        srclib/apr-util/include/private/apr_dbd_internal.h
        srclib/apr-util/include/private/apr_dbd_odbc_v2.h
        srclib/apr-util/include/private/apr_dbm_private.h
        srclib/apr-util/include/private/apu_config.h
        srclib/apr-util/include/private/apu_internal.h
        srclib/apr-util/include/private/apu_select_dbm.h
        srclib/apr-util/include/apr_anylock.h
        srclib/apr-util/include/apr_base64.h
        srclib/apr-util/include/apr_buckets.h
        srclib/apr-util/include/apr_crypto.h
        srclib/apr-util/include/apr_date.h
        srclib/apr-util/include/apr_dbd.h
        srclib/apr-util/include/apr_dbm.h
        srclib/apr-util/include/apr_hooks.h
        srclib/apr-util/include/apr_ldap.h
        srclib/apr-util/include/apr_ldap_init.h
        srclib/apr-util/include/apr_ldap_option.h
        srclib/apr-util/include/apr_ldap_rebind.h
        srclib/apr-util/include/apr_ldap_url.h
        srclib/apr-util/include/apr_md4.h
        srclib/apr-util/include/apr_md5.h
        srclib/apr-util/include/apr_memcache.h
        srclib/apr-util/include/apr_optional.h
        srclib/apr-util/include/apr_optional_hooks.h
        srclib/apr-util/include/apr_queue.h
        srclib/apr-util/include/apr_reslist.h
        srclib/apr-util/include/apr_rmm.h
        srclib/apr-util/include/apr_sdbm.h
        srclib/apr-util/include/apr_sha1.h
        srclib/apr-util/include/apr_strmatch.h
        srclib/apr-util/include/apr_thread_pool.h
        srclib/apr-util/include/apr_uri.h
        srclib/apr-util/include/apr_uuid.h
        srclib/apr-util/include/apr_xlate.h
        srclib/apr-util/include/apr_xml.h
        srclib/apr-util/include/apu.h
        srclib/apr-util/include/apu_errno.h
        srclib/apr-util/include/apu_version.h
        srclib/apr-util/include/apu_want.h
        srclib/apr-util/ldap/apr_ldap_init.c
        srclib/apr-util/ldap/apr_ldap_option.c
        srclib/apr-util/ldap/apr_ldap_rebind.c
        srclib/apr-util/ldap/apr_ldap_stub.c
        srclib/apr-util/ldap/apr_ldap_url.c
        srclib/apr-util/memcache/apr_memcache.c
        srclib/apr-util/misc/apr_date.c
        srclib/apr-util/misc/apr_queue.c
        srclib/apr-util/misc/apr_reslist.c
        srclib/apr-util/misc/apr_rmm.c
        srclib/apr-util/misc/apr_thread_pool.c
        srclib/apr-util/misc/apu_dso.c
        srclib/apr-util/misc/apu_version.c
        srclib/apr-util/strmatch/apr_strmatch.c
        srclib/apr-util/test/abts.c
        srclib/apr-util/test/abts.h
        srclib/apr-util/test/abts_tests.h
        srclib/apr-util/test/dbd.c
        srclib/apr-util/test/nw_misc.c
        srclib/apr-util/test/test_apu.h
        srclib/apr-util/test/testbuckets.c
        srclib/apr-util/test/testcrypto.c
        srclib/apr-util/test/testdate.c
        srclib/apr-util/test/testdbd.c
        srclib/apr-util/test/testdbm.c
        srclib/apr-util/test/testldap.c
        srclib/apr-util/test/testmd4.c
        srclib/apr-util/test/testmd5.c
        srclib/apr-util/test/testmemcache.c
        srclib/apr-util/test/testpass.c
        srclib/apr-util/test/testqueue.c
        srclib/apr-util/test/testreslist.c
        srclib/apr-util/test/testrmm.c
        srclib/apr-util/test/teststrmatch.c
        srclib/apr-util/test/testuri.c
        srclib/apr-util/test/testutil.c
        srclib/apr-util/test/testutil.h
        srclib/apr-util/test/testuuid.c
        srclib/apr-util/test/testxlate.c
        srclib/apr-util/test/testxml.c
        srclib/apr-util/uri/apr_uri.c
        srclib/apr-util/xlate/xlate.c
        srclib/apr-util/xml/expat/lib/ascii.h
        srclib/apr-util/xml/expat/lib/asciitab.h
        srclib/apr-util/xml/expat/lib/expat.h
        srclib/apr-util/xml/expat/lib/iasciitab.h
        srclib/apr-util/xml/expat/lib/internal.h
        srclib/apr-util/xml/expat/lib/latin1tab.h
        srclib/apr-util/xml/expat/lib/map_osd_ebcdic_df04_1.h
        srclib/apr-util/xml/expat/lib/nametab.h
        srclib/apr-util/xml/expat/lib/osd_ebcdic_df04_1.h
        srclib/apr-util/xml/expat/lib/utf8tab.h
        srclib/apr-util/xml/expat/lib/winconfig.h
        srclib/apr-util/xml/expat/lib/xmlparse.c
        srclib/apr-util/xml/expat/lib/xmlrole.c
        srclib/apr-util/xml/expat/lib/xmlrole.h
        srclib/apr-util/xml/expat/lib/xmltok.c
        srclib/apr-util/xml/expat/lib/xmltok.h
        srclib/apr-util/xml/expat/lib/xmltok_impl.c
        srclib/apr-util/xml/expat/lib/xmltok_impl.h
        srclib/apr-util/xml/expat/lib/xmltok_ns.c
        srclib/apr-util/xml/expat/expat_config.h
        srclib/apr-util/xml/apr_xml.c
        srclib/apr-util/export_vars.c
        srclib/apr-util/exports.c
    support/win32/ApacheMonitor.c
    support/win32/ApacheMonitor.h
    support/win32/wintty.c
    support/ab.c
    support/checkgid.c
    support/fcgistarter.c
    support/htcacheclean.c
    support/htdbm.c
    support/htdigest.c
    support/htpasswd.c
    support/httxt2dbm.c
    support/logresolve.c
    support/passwd_common.c
    support/passwd_common.h
    support/rotatelogs.c
    support/suexec.c
    support/suexec.h
    test/cls.c
    test/test-writev.c
    test/test_find.c
    test/test_limits.c
    test/test_parser.c
    test/test_select.c
        test/time-sem.c
        modules.c)

add_executable(httpd ${SOURCE_FILES})

include_directories(include)
include_directories(/usr/local/Cellar/apr/1.5.2_3/libexec/include/apr-1/)
include_directories(/usr/local/Cellar/apr-util/1.5.4_4/libexec/include/apr-1/)